--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.home=C:/tomcat-8.0
 j2ee.server.instance=tomcat80:home=C:\\tomcat-8.0
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome.INTEGRATED
 user.properties.file=C:\\Users\\stephen\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
